chore: 清理无用文件并升级项目依赖适配
1.  删除所有.DS_Store、target目录编译文件、临时资源文件与IDE配置文件
2.  将javax.servlet相关依赖替换为jakarta.servlet
3.  调整MyBatis查询语句添加LIMIT限制、升级RSA密钥长度至2048位
4.  修复Class实例化方式、优化RSA加密填充模式
5.  更新部分界面文本与.gitignore规则